tests/snapshots/test__from_fixtures@min_length__min_length_add.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    type: string
  rhs:
    minLength: 5
    type: string
input_file: tests/fixtures/min_length/min_length_add.json
---
[
    Change {
        path: "",
        change: MinLengthAdd {
            added: 5,
        },
    },
]
