tests/snapshots/test__from_fixtures@min_length__min_length_increase.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    minLength: 3
    type: string
  rhs:
    minLength: 5
    type: string
input_file: tests/fixtures/min_length/min_length_increase.json
---
[
    Change {
        path: "",
        change: MinLengthChange {
            old_value: 3,
            new_value: 5,
        },
    },
]
